# streamchat

./: Cargo.toml  README.md  rustfmt.toml
src/: args.rs  color.rs  colorconfig.rs  config.rs  emote.rs  layout.rs  lib.rs  message.rs  queue.rs
src/transports/: file.rs  mod.rs  socket.rs
streamchat/: Cargo.toml
streamchat/src/: config.rs  connection.rs  lib.rs  message.rs  queue.rs  tags.rs
streamchatc/: Cargo.toml
streamchatc/src/: args.rs  client.rs  config.rs  error.rs  layout.rs  lib.rs  main.rs  state.rs  window.rs
streamchatd/: Cargo.toml
streamchatd/src/: color.rs  colorconfig.rs  commands.rs  config.rs  error.rs  ircmessage.rs  lib.rs  main.rs  service.rs
streamchatd/src/transports/: mod.rs  socket.rs  websocket.rs
twitchchat/: Cargo.toml
twitchchat/src/: args.rs  badge.rs  color.rs  config.rs  emote.rs  lib.rs  message.rs  tags.rs
twitchchat/src/transports/: error.rs  file.rs  mod.rs  socket.rs
twitchchatc/: Cargo.toml
twitchchatc/src/: buffer.rs  error.rs  layout.rs  lib.rs  main.rs  options.rs
twitchchatd/: Cargo.toml
twitchchatd/src/: client.rs  colorconfig.rs  command.rs  conn.rs  custom.rs  dispatcher.rs  error.rs  ircmessage.rs  lib.rs  main.rs  mockconn.rs  options.rs  queue.rs  server.rs  tags.rs  tcpconn.rs
twitchchatd/src/transports/: file.rs  mod.rs  socket.rs
