[package]
name = "twitch-chat"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
termcolor = "1.0.4"
atty = "0.2.11"
term_size = "0.3.1"

unicode-segmentation = "1.2.1"

serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"

crossbeam-channel = "0.3.1"
