[package]
name = "streamchatc"
version = "0.2.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
streamchat = { path = "../streamchat" }

configurable = "0.3.4"
gumdrop = "0.6.0"
unicode-width = "0.1.5"
unicode-segmentation = "1.3.0"

serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"

yansi = "0.5.0"
# TODO make the "backends" configurable until one actually works
console = "0.7.7"

[dependencies.maybe_list]
git = "https://github.com/museun/maybe_list"
version = "0.1.0"
