[package]
name = "streamchatd"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
streamchat = { path = "../streamchat" }
log = "0.4.6"
env_logger = "0.6.1"
twitchchat = "0.4.3"
hashbrown = "0.2.2"
parking_lot = "0.7.1"
crossbeam-channel = "0.3.8"
serde_json = "1.0.39"

[dependencies.serde]
version = "1.0.90"
features = ["derive"]

[dependencies.configurable]
git = "https://github.com/museun/configurable"
version = "0.3.0"
