[package]
name = "streamchatd"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
streamchat = { path = "../streamchat" }
log = "0.4.6"
env_logger = "0.6.1"
twitchchat = "0.6.3"
parking_lot = "0.8.0"
crossbeam-channel = "0.3.8"
serde_json = "1.0.39"

[dependencies.hashbrown]
version = "0.5.0"
features = ["serde"]

[dependencies.serde]
version = "1.0.92"
features = ["derive"]

[dependencies.configurable]
git = "https://github.com/museun/configurable"
version = "0.3"
