[package]
name = "streamchatd"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
streamchat = { path = "../streamchat" }

log = "0.4.7"
flexi_logger = "0.14.0"

parking_lot = "0.9.0"
crossbeam-channel = "0.3.9"

configurable = "0.3.4"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
