[package]
name = "twitchchat"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0.38"
hashbrown = { version = "0.1.8", features = ["serde"] }
directories = "1.0.2"
toml = "0.4.10"
